--- a/apps/airflow/manifests/lb.yml
+++ b/apps/airflow/manifests/lb.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: airflow-lb
+  name: airflow-lb-v2
   namespace: airflow
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: external
@@ -11,7 +11,6 @@ spec:
   type: LoadBalancer
   selector:
     component: api-server
-    release: airflow
     tier: airflow
   ports:
   - port: 8080
