adding node affinity to local volume used for jenkins

--- a/apps/jenkins/manifests/volume.yml
+++ b/apps/jenkins/manifests/volume.yml
@@ -19,6 +19,14 @@ spec:
     namespace: jenkins
   local:
     path: /mnt
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: eks.amazonaws.com/nodegroup
+          operator: In
+          values:
+          - "public"
   accessModes:
     - ReadWriteOnce
   storageClassName: local-storage
