testing github workflow for terraform infra

--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches: 
     - feature/github-workflow
+    # paths-ignore: # prevents the activation of the workflow when change is applied on listed paths
+    # - # path to ignore
 jobs:
   info:
     runs-on: ubuntu-latest
