--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Terraform Init
       run: terraform init
     - name: Terraform Format
-      run: terraform fmt -check -recursive
+      run: terraform fmt -check
     - name: Terraform Validate
       run: terraform validate -no-color
     - name: Terraoform Plan
