changing terraform version

--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
       with:
-        terraform_version: ${{ secrets.TERRAFORM_VERSION }}
+        terraform_version: 1.5.0
     - name: Terraform Init
       run: terraform init
     - name: Terraform Format
