--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -15,8 +15,8 @@ jobs:
         terraform_wrapper: false
     - name: Terraform Init
       run: terraform init
-    - name: Terraform Format
-      run: terraform fmt -check
+    # - name: Terraform Format
+    #   run: terraform fmt -check
     - name: Terraform Validate
       run: terraform validate -no-color
     - name: Terraoform Plan
