fixing mispelling with aws_secret_access_key

--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -9,6 +9,11 @@ jobs:
     steps:
     - name: Get Code
       uses: actions/checkout@v3
+    # - name: Configure AWS Credentials
+    #   uses: aws-actions/configure-aws-credentials@v4
+    #   with:
+    #     aws-access-key-id: ${{ secrets.ACCESS_KEY }}
+    #     aws-secret-access-key: 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
       with:
@@ -23,9 +28,9 @@ jobs:
     - name: Terraoform Plan
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
-        AWS_ACCESS_SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_KEY }}
       id: plan
-      run: terraform plan -no-color
+      run: terraform plan -no-color -parallelism=1
     # - name: Terraform Add Plan as Comment
     #   uses: actions/github-script@v6
     #   env:
