--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -14,8 +14,8 @@ jobs:
         terraform_version: ${{ secrets.TERRAFORM_VERSION }}
     - name: Terraform Init
       run: terraform init
-    - name: Terraform Format
-      run: terraform fmt -check -recursive
+    # - name: Terraform Format
+    #   run: terraform fmt -check -recursive
     - name: Terraform Validate
       run: terraform validate -no-color
     - name: Terraoform Plan
