--- a/apps/vcluster/values.yml
+++ b/apps/vcluster/values.yml
@@ -1,8 +1,4 @@
-parameters:
-  # admin
-  - name: admin.create
-    value: "true"
-  - name: admin.username
-    value: admin1
-  - name: admin.password
-    value: password1
+admin:
+  create: true
+  username: admin1
+  password: password1
