--- a/apps/vcluster/values.yml
+++ b/apps/vcluster/values.yml
@@ -1,4 +1,9 @@
+envValueFrom:
+  PASSWORD:
+    secretKeyRef:
+      name: vcluster-secret
+      key: password
 admin:
   create: true
   username: admin1
-  password: password1
+  password: $PASSWORD
